[gd_scene load_steps=14 format=2]

[ext_resource path="res://spr_sprites/spr_character/char_sleepstate/char_SLEEP_gold_idle_0003.png" type="Texture" id=1]
[ext_resource path="res://levels/level_0/background_character.gd" type="Script" id=2]
[ext_resource path="res://spr_sprites/spr_character/char_sleepstate/char_SLEEP_gold_wake_0004.png" type="Texture" id=3]
[ext_resource path="res://spr_sprites/spr_character/char_sleepstate/char_SLEEP_gold_idle_0001.png" type="Texture" id=4]
[ext_resource path="res://spr_sprites/spr_character/char_sleepstate/char_SLEEP_gold_wake_0003.png" type="Texture" id=5]
[ext_resource path="res://spr_sprites/spr_character/char_sleepstate/char_SLEEP_gold_wake_0005.png" type="Texture" id=6]
[ext_resource path="res://spr_sprites/spr_character/char_sleepstate/char_SLEEP_gold_wake_0001.png" type="Texture" id=7]
[ext_resource path="res://spr_sprites/spr_character/char_sleepstate/char_SLEEP_gold_idle_0002.png" type="Texture" id=8]
[ext_resource path="res://spr_sprites/spr_character/char_sleepstate/char_SLEEP_gold_wake_0002.png" type="Texture" id=9]
[ext_resource path="res://spr_sprites/spr_character/char_sleepstate/char_SLEEP_gold_wake_0006.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 10 ) ],
"loop": false,
"name": "eye_opened",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="background_character" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -7.13525, -14.2705 )
frames = SubResource( 1 )
frame = 4
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 2 )
anims/default = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
